--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Frigg</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="fetching_data" />
+    <string name="fetching_data">Fetching…</string>
+    <string name="saving_data">Saving…</string>
 
     <string name="error_400">An unexpected error has occurred.</string>
     <string name="error_volley_no_internet">You must have an internet connection to use this app.</string>
@@ -12,6 +13,14 @@
 
     <string name="bottom_nav_item_1">Grocery</string>
     <string name="grocery_title">Grocery Items</string>
+    <string name="grocery_delete_item_title">Delete Item</string>
+    <string name="grocery_delete_item_message">Do you want to remove this item from your list?</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
+
+    <string name="error_title">Error!</string>
+    <string name="save_items_error">Unable to save items</string>
+    <string name="ok">Ok</string>
 
     <string name="bottom_nav_item_2">Recommend</string>
     <string name="bottom_nav_item_3">More</string>
