--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="yes">YES</string>
     <string name="no">NO</string>
 
+    <string name="food_detail_title">Details</string>
+    <string name="image_url">"https://frigg-images.s3.amazonaws.com/%1$s.jpg"</string>
+
     <string name="error_title">Error!</string>
     <string name="save_items_error">Unable to save items</string>
     <string name="ok">Ok</string>
