--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="recommend_me">Recommend Me</string>
+    <string name="ingredients_text">You need following ingredients to cook %1$s.</string>
+    <string name="title_activity_dish_recipe">DishRecipeActivity</string>
 </resources>
