--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
 
     <string name="fridge_id">Fridge-Id</string>
     <string name="invite_code">Invite-code</string>
+    <string name="user_name">UserName</string>
+    <string name="user_email">User_Email</string>
 </resources>
